--- a/myTodoList/project.config.json
+++ b/myTodoList/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.2.4",
-	"appid": "wx2a4f337574e62df6",
+	"appid": "",
 	"projectname": "myTodoList",
 	"isGameTourist": false,
 	"condition": {
